refactor product controller